--- a/public/style.css
+++ b/public/style.css
@@ -564,6 +564,10 @@ video {
   left: -20rem !important;
 }
 
+.-top-14 {
+  top: -3.5rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -580,6 +584,10 @@ video {
   left: 20rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -588,44 +596,20 @@ video {
   top: 2.5rem;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
 .top-14 {
   top: 3.5rem;
 }
 
-.left-\[-50\] {
-  left: -50;
+.top-3 {
+  top: 0.75rem;
 }
 
-.left-\[-50\%\] {
-  left: -50%;
+.top-12 {
+  top: 3rem;
 }
 
-.left-\[50\%\] {
-  left: 50%;
-}
-
-.left-\[-40\%\] {
-  left: -40%;
-}
-
-.right-0 {
-  right: 0px;
+.top-\[50px\] {
+  top: 50px;
 }
 
 .z-10 {
@@ -663,14 +647,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -695,6 +671,10 @@ video {
   height: 3.5rem;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
 .h-9 {
   height: 2.25rem;
 }
@@ -707,28 +687,8 @@ video {
   height: 100%;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-44 {
-  height: 11rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-28 {
-  height: 7rem;
+.h-screen {
+  height: 100vh;
 }
 
 .min-h-\[600px\] {
@@ -755,8 +715,8 @@ video {
   width: 18rem;
 }
 
-.w-\[18rem\] {
-  width: 18rem;
+.w-\[16rem\] {
+  width: 16rem;
 }
 
 .w-\[400px\] {
@@ -765,6 +725,18 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-1\/5 {
+  width: 20%;
 }
 
 .min-w-max {
@@ -778,21 +750,6 @@ video {
 
 .max-w-\[280px\] {
   max-width: 280px;
-}
-
-.translate-x-\[-\] {
-  --tw-translate-x: -;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[-50\%\] {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[-40\%\] {
-  --tw-translate-x: -40%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-180 {
@@ -878,6 +835,10 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-r {
   border-right-width: 1px;
 }
@@ -901,6 +862,11 @@ video {
   background-color: rgb(32 32 32 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#2d2f31\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 47 49 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#fff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -914,15 +880,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#2d2f31\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(45 47 49 / var(--tw-bg-opacity));
-}
-
-.bg-center {
-  background-position: center;
 }
 
 .object-cover {
@@ -942,12 +899,9 @@ video {
   padding: 1.5rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-60 {
-  padding: 15rem;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-4 {
@@ -980,34 +934,8 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.pt-14 {
-  padding-top: 3.5rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .pt-9 {
@@ -1016,26 +944,6 @@ video {
 
 .text-center {
   text-align: center;
-}
-
-.align-middle {
-  vertical-align: middle;
-}
-
-.align-bottom {
-  vertical-align: bottom;
-}
-
-.align-text-bottom {
-  vertical-align: text-bottom;
-}
-
-.align-sub {
-  vertical-align: sub;
-}
-
-.align-super {
-  vertical-align: super;
 }
 
 .font-SusseWorks {
@@ -1051,22 +959,33 @@ video {
   font-size: 15px;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-\[16px\] {
+  font-size: 16px;
 }
 
 .text-\[20px\] {
   font-size: 20px;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-\[18\.5px\] {
+  font-size: 18.5px;
+}
+
+.text-\[19\.5px\] {
+  font-size: 19.5px;
+}
+
+.text-\[18\.8px\] {
+  font-size: 18.8px;
 }
 
 .font-bold {
@@ -1081,25 +1000,54 @@ video {
   line-height: .75rem;
 }
 
-.leading-10 {
-  line-height: 2.5rem;
-}
-
 .leading-6 {
   line-height: 1.5rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
 }
 
 .tracking-tight {
   letter-spacing: -0.025em;
 }
 
-.text-\[\#000\] {
+.tracking-\[\] {
+  letter-spacing: ;
+}
+
+.tracking-\[0\.4\] {
+  letter-spacing: 0.4;
+}
+
+.tracking-\[0\.42\] {
+  letter-spacing: 0.42;
+}
+
+.tracking-\[\.2\] {
+  letter-spacing: .2;
+}
+
+.tracking-\[\.9\] {
+  letter-spacing: .9;
+}
+
+.tracking-\[\.9px\] {
+  letter-spacing: .9px;
+}
+
+.tracking-\[-\.9px\] {
+  letter-spacing: -.9px;
+}
+
+.tracking-\[-\.2px\] {
+  letter-spacing: -.2px;
+}
+
+.\!text-liColor {
+  --tw-text-opacity: 1 !important;
+  color: rgb(45 47 49 / var(--tw-text-opacity)) !important;
+}
+
+.text-\[\#2D2F31\] {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(45 47 49 / var(--tw-text-opacity));
 }
 
 .text-\[\#2d2f31\] {
@@ -1134,7 +1082,12 @@ video {
 
 .text-disableColor {
   --tw-text-opacity: 1;
-  color: rgb(137 139 141 / var(--tw-text-opacity));
+  color: rgb(106 111 115 / var(--tw-text-opacity));
+}
+
+.text-liColor {
+  --tw-text-opacity: 1;
+  color: rgb(45 47 49 / var(--tw-text-opacity));
 }
 
 .text-mainTextClr {
@@ -1142,18 +1095,24 @@ video {
   color: rgb(28 29 31 / var(--tw-text-opacity));
 }
 
-.text-\[\#\#2D2F31\] {
-  color: ##2D2F31;
-}
-
-.text-\[\#2D2F31\] {
-  --tw-text-opacity: 1;
-  color: rgb(45 47 49 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.\!text-disableColor {
+  --tw-text-opacity: 1 !important;
+  color: rgb(106 111 115 / var(--tw-text-opacity)) !important;
+}
+
+.text-\[18\.px\] {
+  color: 18.px;
+}
+
+.shadow-dropDownBox {
+  --tw-shadow: 0 0 0 1px #d1d7dc,0 2px 4px #00000014,0 4px 12px #00000014;
+  --tw-shadow-colored: 0 0 0 1px var(--tw-shadow-color), 0 2px 4px var(--tw-shadow-color), 0 4px 12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg {
@@ -1233,6 +1192,34 @@ video {
   }
 }
 
+.placeholder\:text-liColor::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(45 47 49 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-liColor::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(45 47 49 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-\[\#6a6f73\]::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(106 111 115 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-\[\#6a6f73\]::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(106 111 115 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-\[\#6a6f73d7\]::-moz-placeholder {
+  color: #6a6f73d7;
+}
+
+.placeholder\:text-\[\#6a6f73d7\]::placeholder {
+  color: #6a6f73d7;
+}
+
 .hover\:cursor-not-allowed:hover {
   cursor: not-allowed;
 }
@@ -1242,14 +1229,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-secondary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#3E4143\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(62 65 67 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-secondary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-80:hover {
