--- a/public/style.css
+++ b/public/style.css
@@ -568,6 +568,10 @@ video {
   top: -3.5rem;
 }
 
+.-top-20 {
+  top: -5rem;
+}
+
 .-top-\[2px\] {
   top: -2px;
 }
@@ -580,16 +584,20 @@ video {
   left: 4rem;
 }
 
+.left-52 {
+  left: 13rem;
+}
+
 .left-72 {
   left: 18rem;
 }
 
-.left-80 {
-  left: 20rem;
-}
-
 .left-\[-10px\] {
   left: -10px;
+}
+
+.left-\[19\.6875rem\] {
+  left: 19.6875rem;
 }
 
 .left-\[254px\] {
@@ -628,6 +636,14 @@ video {
   top: 50px;
 }
 
+.-top-2 {
+  top: -0.5rem;
+}
+
+.-top-28 {
+  top: -7rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -638,6 +654,26 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-\[99999999999\] {
+  z-index: 99999999999;
+}
+
+.z-\[999999999999999999999999999999999999\] {
+  z-index: 999999999999999999999999999999999999;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.\!z-50 {
+  z-index: 50 !important;
 }
 
 .\!mx-0 {
@@ -660,12 +696,13 @@ video {
   margin-right: auto;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mb-8 {
@@ -724,6 +761,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -770,6 +811,10 @@ video {
   height: 10rem;
 }
 
+.h-80 {
+  height: 20rem;
+}
+
 .h-9 {
   height: 2.25rem;
 }
@@ -788,6 +833,30 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[22\.5rem\] {
+  height: 22.5rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-\[24\.5rem\] {
+  height: 24.5rem;
+}
+
+.h-\[32\.5rem\] {
+  height: 32.5rem;
+}
+
+.h-\[29\.5rem\] {
+  height: 29.5rem;
+}
+
+.h-\[30\.5rem\] {
+  height: 30.5rem;
 }
 
 .min-h-\[600px\] {
@@ -835,6 +904,10 @@ video {
   width: 18rem;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
 .w-\[16rem\] {
   width: 16rem;
 }
@@ -855,6 +928,62 @@ video {
 .w-min {
   width: -moz-min-content;
   width: min-content;
+}
+
+.w-\[22\.5rem\] {
+  width: 22.5rem;
+}
+
+.w-\[21\.5rem\] {
+  width: 21.5rem;
+}
+
+.w-\[20\.5rem\] {
+  width: 20.5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.\!w-10 {
+  width: 2.5rem !important;
+}
+
+.\!w-14 {
+  width: 3.5rem !important;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.\!w-12 {
+  width: 3rem !important;
 }
 
 .min-w-max {
@@ -957,6 +1086,10 @@ video {
   overflow-x: hidden;
 }
 
+.\!overflow-y-visible {
+  overflow-y: visible !important;
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -1046,6 +1179,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-activeClr {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 63 214 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a435f0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(164 53 240 / var(--tw-bg-opacity));
+}
+
+.bg-disableColor {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 111 115 / var(--tw-bg-opacity));
+}
+
 .bg-none {
   background-image: none;
 }
@@ -1116,6 +1264,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1180,6 +1333,10 @@ video {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .leading-3 {
   line-height: .75rem;
 }
@@ -1219,6 +1376,11 @@ video {
 .text-\[\#3d3c0a\] {
   --tw-text-opacity: 1;
   color: rgb(61 60 10 / var(--tw-text-opacity));
+}
+
+.text-\[\#5d8d85\] {
+  --tw-text-opacity: 1;
+  color: rgb(93 141 133 / var(--tw-text-opacity));
 }
 
 .text-\[\#6a6f73\] {
@@ -1278,6 +1440,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 245 / var(--tw-text-opacity));
 }
 
 .shadow-dropDownBox {
@@ -1417,8 +1584,25 @@ body {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#e3e7ea\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 231 234 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-80:hover {
   --tw-bg-opacity: 0.8;
+}
+
+.hover\:bg-opacity-75:hover {
+  --tw-bg-opacity: 0.75;
+}
+
+.hover\:bg-opacity-95:hover {
+  --tw-bg-opacity: 0.95;
+}
+
+.hover\:bg-opacity-90:hover {
+  --tw-bg-opacity: 0.9;
 }
 
 .hover\:text-activeButton:hover {
